--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.11",
-    "node-fetch": "^3.3.1",
     "socket.io": "^4.6.2"
   },
   "compilerOptions": {
