--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.0.11",
     "socket.io": "^4.6.2"
   },
